// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<View>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    Lindsay McIntosh, Scottish Political Editor
  </div>
</View>
`;

exports[`2. with the author in the begining 1`] = `
<View>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , Environment Editor
  </div>
</View>
`;

exports[`3. with the author at the end 1`] = `
<View>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    RBS Six Nations, 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/mike-atherton"
  >
    Mike Atherton
  </a>
</View>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<View>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
     | 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/mike-atherton"
  >
    Mike Atherton
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
     | 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/alexandra-frean"
  >
    Alexandra Frean
  </a>
</View>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<View>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/mike-atherton"
  >
    Mike Atherton
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/alexandra-frean"
  >
    Alexandra Frean
  </a>
</View>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<View>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
     
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/mike-atherton"
  >
    Mike Atherton
  </a>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 text-link__LinkTextObj-xyehx2-0 fGCkRx"
    href="/profile/alexandra-frean"
  >
    Alexandra Frean
  </a>
</View>
`;

exports[`7. null with an empty ast 1`] = `null`;
